# find-anything

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile  README.md  ROADMAP.md  TODO.md  docker-compose.yml  install-server.sh  install-windows.ps1  install.sh  server.toml.example  uninstall-windows.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.mise/tasks/: release
config/: client.toml  server.toml
crates/client/: Cargo.toml
crates/client/src/: admin_main.rs  api.rs  batch.rs  config_main.rs  extract.rs  lazy_header.rs  lib.rs  query_main.rs  scan.rs  scan_main.rs  subprocess.rs  upload.rs  upload_main.rs  watch.rs  watch_main.rs
crates/client/tests/: helpers.rs  scan.rs  watch.rs
crates/client/tests/fixtures/: find-extract-nd1  test.nd1  test.pages
crates/common/: Cargo.toml
crates/common/src/: api.rs  config.rs  defaults_client.toml  defaults_server.toml  lib.rs  logging.rs  mem.rs  subprocess.rs
crates/common/src/extract/: archive.rs  audio.rs  image.rs  mod.rs  pdf.rs  text.rs  video.rs
crates/content-store/: Cargo.toml
crates/content-store/src/: bench.rs  key.rs  lib.rs  multi_store.rs  store.rs
crates/content-store/src/sqlite_store/: db.rs  mod.rs
crates/content-store/src/zip_store/: archive.rs  chunk.rs  db.rs  mod.rs  shared.rs
crates/content-store/tests/: contract.rs
crates/extract-types/src/: extractor_config.rs  index_line.rs  lib.rs
crates/extractors/archive/: Cargo.toml  build.rs
crates/extractors/archive/src/: iwork.rs  lib.rs  main.rs
crates/extractors/archive/tests/: extract.rs
crates/extractors/dicom/: Cargo.toml
crates/extractors/dicom/src/: lib.rs
crates/extractors/dicom/tests/: extract.rs
crates/extractors/dispatch/: Cargo.toml
crates/extractors/dispatch/src/: lib.rs  main.rs
crates/extractors/epub/: Cargo.toml
crates/extractors/epub/src/: lib.rs  main.rs
crates/extractors/html/: Cargo.toml
crates/extractors/html/src/: lib.rs  main.rs
crates/extractors/media/: Cargo.toml
crates/extractors/media/src/: lib.rs  main.rs
crates/extractors/media/testdata/: tagged.flac
crates/extractors/office/: Cargo.toml
crates/extractors/office/src/: lib.rs  main.rs
crates/extractors/pdf/: Cargo.toml
crates/extractors/pdf/src/: lib.rs  main.rs
crates/extractors/pe/: Cargo.toml
crates/extractors/pe/src/: lib.rs  main.rs
crates/extractors/text/: Cargo.toml
crates/extractors/text/src/: lib.rs  main.rs
crates/handler/: Cargo.toml
crates/preview-dicom/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: archive.rs  compaction.rs  db.rs  find_test_main.rs  fuzzy.rs  image_util.rs  lib.rs  main.rs  normalize.rs  routes.rs  schema.sql  schema_v2.sql  schema_v4.sql  stats_cache.rs  upload.rs  worker.rs
crates/server/src/db/: constants.rs  links.rs  mod.rs  search.rs  stats.rs  tree.rs
crates/server/src/routes/: admin.rs  bulk.rs  context.rs  dicom_preview.rs  errors.rs  file.rs  links.rs  mod.rs  raw.rs  recent.rs  search.rs  session.rs  settings.rs  stats.rs  tree.rs  upload.rs
crates/server/src/worker/: archive_batch.rs  mod.rs  pipeline.rs  request.rs
crates/server/tests/: admin.rs  delete.rs  errors.rs  file_pagination.rs  index_and_search.rs  indexing_errors.rs  links.rs  multi_source.rs  recent.rs  search_filters.rs  search_modes.rs  smoke.rs  stats_cache.rs  upload.rs
crates/server/tests/helpers/: mod.rs
crates/windows/service/: Cargo.toml
crates/windows/service/src/: lib.rs
crates/windows/tray/: Cargo.toml
crates/windows/tray/src/: main.rs  menu.rs  poller.rs  service_ctl.rs
docs/: ARCHITECTURE.md  binary-sizes.md  cli.md  todo.md
docs/investigations/: 001-archive-index-compression.md  002-audio-metadata-consolidation.md  004-server-crash.md
docs/manual/: 01-installation.md  02-configuration.md  03-indexing.md  04-search.md  05-web-ui.md  06-file-types.md  07-administration.md  08-services.md  09-troubleshooting.md  README.md
docs/misc/: demo-data.md  generate-demo-data.py  make_fixtures.py  seed-demo-db.py
docs/patches/: 034-pdf-extract-path-operator-bounds.patch
docs/plans/: 017-ci-release-pipeline.md  068-direct-link-sharing.md  071-testing-gaps.md  078-test-coverage-improvement.md  079-line-number-scheme.md  081-content-store-abstraction.md  086-remove-inline-threshold-file-hash.md  088-find-upload-find-scan-delegation.md  089-mobile-support.md
docs/plans/completed/: 068-direct-link-sharing.md  069-video-player.md  080-search-zip-read-elimination.md  087-open-in-explorer.md
docs/superpowers/specs/: 2026-03-16-inline-safe-extractors-design.md
docs/systemd/: README.md
docs/systemd/system/: find-server.service  find-watch@.service
docs/systemd/user/: find-server.service  find-watch.service
docs/windows/: README.md
examples/: client.toml  server.toml
packaging/windows/: find-anything.iss  scan-and-start.bat
packaging/winget/: Outsharked.FindAnything.installer.yaml  Outsharked.FindAnything.locale.en-US.yaml  Outsharked.FindAnything.yaml
web/: .env.example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1772053904622-8db7bb34d78608.mjs
web/src/: app.css  app.d.ts  app.html
web/src/lib/: About.svelte  AdminPanel.svelte  AdvancedSearch.svelte  AppLogo.svelte  AudioViewer.svelte  Breadcrumb.svelte  CodeViewer.svelte  CommandPalette.svelte  Dashboard.svelte  DirListing.svelte  DirectHeader.svelte  DirectImageViewer.svelte  DirectoryTree.svelte  ErrorsPanel.svelte  FileStatusBanner.svelte  FileView.svelte  FileViewer.svelte  ImageViewer.svelte  MetaDrawer.svelte  MobilePanel.svelte  MultiSourceTree.svelte  PathBar.svelte  PdfViewer.svelte  Preferences.svelte  ResultList.svelte  SearchBox.svelte  SearchHelp.svelte  SearchHelpContent.svelte  SearchResult.svelte  SearchView.svelte  Settings.svelte  SourceChips.svelte  SourceSelector.svelte  StatsPanel.svelte  TopBar.svelte  TreeRow.svelte  VideoViewer.svelte  api.ts  appState.ts  clickOutside.ts  (+14 more)
web/src/lib/icons/: IconBack.svelte  (+20 more)
web/src/routes/: +layout.svelte  +page.svelte
(+3 files in other folders)
