[workspace]
members = [
    "crates/common",
    "crates/server",
    "crates/client",
    "crates/extractors/text",
    "crates/extractors/pdf",
    "crates/extractors/media",
    "crates/extractors/archive",
    "crates/extractors/html",
    "crates/extractors/office",
    "crates/extractors/epub",
    "crates/extractors/pe",
    "crates/windows/service",
    "crates/windows/tray",
]
resolver = "2"

[workspace.dependencies]
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde_ignored   = "0.1"
toml            = "0.8"
tokio           = { version = "1", features = ["full"] }
tracing         = "0.1"
nucleo-matcher  = "0.3"
walkdir         = "2"
globset         = "0.4"
content_inspector = "0.2"
