[package]
name = "find-client"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "find-scan"
path = "src/scan_main.rs"

[[bin]]
name = "find-watch"
path = "src/watch_main.rs"

[[bin]]
name = "find-anything"
path = "src/query_main.rs"

[[bin]]
name = "find-config"
path = "src/config_main.rs"

[dependencies]
find-common = { path = "../common" }
find-extract-text = { path = "../extractors/text" }
find-extract-pdf = { path = "../extractors/pdf" }
find-extract-media = { path = "../extractors/media" }
find-extract-archive = { path = "../extractors/archive" }
find-extract-html    = { path = "../extractors/html" }
find-extract-office  = { path = "../extractors/office" }
find-extract-epub    = { path = "../extractors/epub" }
find-extract-pe      = { path = "../extractors/pe" }
anyhow      = { workspace = true }
clap        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
walkdir     = { workspace = true }
globset     = { workspace = true }

reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
notify      = "6"
toml        = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored     = "2"
flate2      = "1"

[target.'cfg(windows)'.dependencies]
find-windows-service = { path = "../windows/service" }
windows-service = "0.8"
