[package]
name = "find-common"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow          = { workspace = true }
tracing         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
nucleo-matcher  = { workspace = true }
walkdir         = { workspace = true }
globset         = { workspace = true }
content_inspector = { workspace = true }

# Archive extraction (ported from text-scan)
zip        = "2"
tar        = "0.4"
flate2     = "1"
bzip2      = "0.4"
xz2        = { version = "0.1", features = ["static"] }
sevenz-rust = "0.6"

# Rich content extractors
pdf-extract  = "0.7"
kamadak-exif = "0.5"
id3          = "1"
metaflac     = "0.2"
mp4ameta     = "0.11"
audio-video-metadata = "0.1"
