[package]
name = "find-server"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "find-server"
path = "src/main.rs"

[dependencies]
find-common   = { path = "../common" }
anyhow        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
nucleo-matcher = { workspace = true }

axum          = "0.8"
tower         = "0.5"
tower-http    = { version = "0.6", features = ["trace", "cors"] }
rusqlite      = { version = "0.31", features = ["bundled"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml          = "0.8"
regex         = "1"

# ZIP archive management and async processing
zip           = "2"
flate2        = "1"
uuid          = { version = "1", features = ["v4"] }
chrono        = "0.4"
