[package]
name = "find-extract-archive"
version = "0.3.1"
edition = "2021"

[lib]
name = "find_extract_archive"
path = "src/lib.rs"

[[bin]]
name = "find-extract-archive"
path = "src/main.rs"

[dependencies]
find-common = { path = "../../common" }
# Unified dispatch handles all member extraction
find-extract-dispatch = { path = "../dispatch" }
# Still needed for accepts() and is_archive_ext()
find-extract-media = { path = "../media" }

anyhow = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Archive formats
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = { version = "0.1", features = ["static"] }
sevenz-rust2 = "0.20"

tempfile = "3"
tracing-subscriber = { workspace = true }

[features]
# Compile-time probe: does `std::alloc::set_alloc_error_hook` compile without
# the nightly feature gate?  Run:
#
#   cargo check -p find-extract-archive --features probe_alloc_hook
#
# If it fails → hook not yet stable (keep subprocess isolation).
# If it succeeds → hook is stable; follow the upgrade path in
#   docs/plans/034-7z-oom-crash.md.
#
# Tracking: https://github.com/rust-lang/rust/issues/51245
probe_alloc_hook = []
