[package]
name = "find-extract-pdf"
version = "0.2.2"
edition = "2021"

[lib]
name = "find_extract_pdf"
path = "src/lib.rs"

[[bin]]
name = "find-extract-pdf"
path = "src/main.rs"

[dependencies]
find-common = { path = "../../common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

pdf-extract = "0.7"
