[package]
name = "find-extract-pdf"
version = "0.3.1"
edition = "2021"

[lib]
name = "find_extract_pdf"
path = "src/lib.rs"

[[bin]]
name = "find-extract-pdf"
path = "src/main.rs"

[dependencies]
find-common = { path = "../../common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pdf-extract = { git = "https://github.com/jamietre/pdf-extract", rev = "4e8e145" }
